objects/Survey_Response__c.object
<CustomObject>
    <fields>
        <fullName>AE_Name__c</fullName>
        <label>AE Name</label>
        <length>160</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Accepted_GCAP_T_Cs__c</fullName>
        <formula>Account__r.Accepted_GCAP_T_Cs__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Accepted GCAP T&amp;Cs</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Account_Owner_Email__c</fullName>
        <description>set and used in WFs</description>
        <label>Account Owner Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Account_Owner_Manager_Email__c</fullName>
        <description>set and used in WFs</description>
        <label>Account Owner Manager Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Account_Owner_Name__c</fullName>
        <formula>Account__r.Owner.FirstName &amp; &apos; &apos; &amp;  Account__r.Owner.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Owner Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Type__c</fullName>
        <formula>Account__r.Account_Type__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Survey Responses</relationshipLabel>
        <relationshipName>Survey_Responses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Additional_comments__c</fullName>
        <label>Additional comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Analytics_Tag10__c</fullName>
        <label>Analytics Tag10</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Analytics_Tag1__c</fullName>
        <label>Analytics Tag1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Analytics_Tag2__c</fullName>
        <label>Analytics Tag2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Availability_of_Service__c</fullName>
        <label>Availability of Service</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BD_PM_Name__c</fullName>
        <label>BD PM Name</label>
        <length>160</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Budget__c</fullName>
        <label>Budget</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Consulting__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Business Consulting</label>
        <referenceTo>Business_Consulting__c</referenceTo>
        <relationshipLabel>Survey Responses</relationshipLabel>
        <relationshipName>Survey_Responses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>COE_resources_assigned__c</fullName>
        <label>COE resources assigned</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSM_Account_Owner__c</fullName>
        <formula>Account__r.CSM_Account_Owner__r.Full_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CSM Account Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSM__c</fullName>
        <formula>Account__r.CSM__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CSM(To be deleted)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Capabilities_and_Functionality__c</fullName>
        <label>Capabilities and Functionality</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Case_Owner_Manager__c</fullName>
        <formula>Case__r.Owner:User.Manager.FirstName&amp; &quot; &quot; &amp;  Case__r.Owner:User.Manager.LastName</formula>
        <label>Case Owner Manager</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Survey Responses</relationshipLabel>
        <relationshipName>Survey_Responses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Casetext__c</fullName>
        <label>External Reference</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client__c</fullName>
        <label>Client</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Closed_Workaround_Com_Adequate__c</fullName>
        <label>Closed Workaround - Com Adequate</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Closed_Workaround_Resol_Date__c</fullName>
        <label>Closed Workaround - Resol Date</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Collector_ID__c</fullName>
        <label>Collector ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Communication__c</fullName>
        <label>Communication</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Email_Formula__c</fullName>
        <formula>if(Case__r.Contact.Email &lt;&gt; &apos;&apos;,Case__r.Contact.Email,Contact__r.Email)</formula>
        <label>Contact Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Name__c</fullName>
        <label>Contact Name</label>
        <length>160</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Owner__c</fullName>
        <formula>Contact__r.Owner.FirstName + &apos; &apos; + Contact__r.Owner.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Phone2__c</fullName>
        <formula>if(Case__r.CaseNumber &lt;&gt; &apos;&apos;,Case__r.Contact.ContactPhone__c,Contact__r.ContactPhone__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Phone__c</fullName>
        <label>Contact Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Contact_Title__c</fullName>
        <label>Contact Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Survey Responses</relationshipLabel>
        <relationshipName>Survey_Responses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DSR_SC_Engagement__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>DSR SC Engagement</label>
        <referenceTo>DSR_SCEngagement__c</referenceTo>
        <relationshipLabel>Survey Responses</relationshipLabel>
        <relationshipName>Survey_Responses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Decision_Role__c</fullName>
        <formula>text(Contact__r.DecisionRole__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Decision Role</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Delivery_PM__c</fullName>
        <label>Delivery PM</label>
        <length>160</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Delivery_time__c</fullName>
        <label>Delivery time</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Department__c</fullName>
        <label>Department</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Customer Care</fullName>
                    <default>true</default>
                    <label>Customer Care</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Deployment_Type1__c</fullName>
        <formula>if((Account__r.Legacy_Company_Name__c !=&apos;&apos; || Account__r.Legacy_Company_Name__c != Null), &quot;Cloud&quot;,&quot;Premise&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Deployment Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deployment_Type__c</fullName>
        <label>Deployment Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Cloud</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Dept__c</fullName>
        <formula>if( Case__r.Id != null &amp;&amp; Case__r.Id != &apos;&apos;,&apos;Customer Care&apos;, if( Project_Reference_ID__c != null &amp;&amp; Project_Reference_ID__c !=&apos;&apos;,&apos;PS&apos;,     
&apos;Not Found&apos; ) 

)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Department</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Direct_or_Indirect__c</fullName>
        <label>Direct or Indirect</label>
        <length>160</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Disposition__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Further Action Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Dissatis_Documentation__c</fullName>
        <label>Documentation</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Dissatis_Other__c</fullName>
        <label>Other</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Dissatis_Product_Quality__c</fullName>
        <label>Product Quality</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Dissatis_Professionalism_Attitude__c</fullName>
        <label>Professionalism/Attitude</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Dissatis_Responsiveness_Resolution_time__c</fullName>
        <label>Responsiveness/Resolution time</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Dissatis_Technical_Expertise__c</fullName>
        <label>Technical Expertise</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Easiness_of_doing_business_with_Genesys__c</fullName>
        <label>Easiness of doing business with Genesys</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_Address__c</fullName>
        <label>Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>End_User_Account_Name__c</fullName>
        <formula>if(Case__r.End_User_Account__r.Name &lt;&gt; &apos;&apos;,Case__r.End_User_Account__r.Name,Account__r.Name)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>End User Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_User_Country__c</fullName>
        <formula>if(
ISBLANK(Case__r.Id),
Account__r.Country__r.Name,
Case__r.End_User_Account__r.Country__r.Name
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>End User Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_User_Garn__c</fullName>
        <formula>Account__r.SAP_Account_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>End User Garn</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_User_Id__c</fullName>
        <formula>Case__r.End_User_Account__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>End User Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_User__c</fullName>
        <label>End User</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Expertise__c</fullName>
        <label>Expertise</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Explain_likely_to_renew__c</fullName>
        <label>Explain likely to renew</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>External_Reference__c</fullName>
        <label>External Reference</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <label>First Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Follow_Up_Comments__c</fullName>
        <label>Follow Up Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Friendly_Project_Name__c</fullName>
        <label>Friendly Project Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Future_Business_Consulting_NPS_Rating__c</fullName>
        <label>Future Business Consulting NPS Rating</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GDPR__c</fullName>
        <label>GDPR</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IP_Address__c</fullName>
        <label>IP Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Job_Function__c</fullName>
        <formula>text(Contact__r.Function__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Job Function</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Language__c</fullName>
        <formula>text(Contact__r.Preferred_Language__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Language</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <label>Last Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Like_the_least__c</fullName>
        <label>Areas partner likes the least</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Like_the_most__c</fullName>
        <label>Areas partner likes the most</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Likely_to_add_or_renew__c</fullName>
        <label>Likely to add</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Likely_to_renew__c</fullName>
        <label>Likely to renew</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NPS_Cloud_Offer__c</fullName>
        <label>NPS Cloud Offer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NPS_Deployment_Type__c</fullName>
        <label>NPS Deployment Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NPS_Direct__c</fullName>
        <label>NPS Direct</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NPS_Notification_Sent__c</fullName>
        <label>NPS Notification Sent</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>NPS_Rating__c</fullName>
        <label>NPS Rating</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NPS_Recommend_Rating__c</fullName>
        <label>NPS Rating about Partner</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NPS_Score_Value__c</fullName>
        <description>Concerting NPS Rating (text) to Value</description>
        <formula>if ( and (Value (NPS_Rating__c) &gt;= 0, Value (NPS_Rating__c) &lt;= 10), Value(NPS_Rating__c), 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>NPS Score Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NPS_Tier__c</fullName>
        <label>NPS Tier</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_of_employees__c</fullName>
        <label>Number of employees</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Name__c</fullName>
        <formula>Opportunity__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Offering__c</fullName>
        <formula>TEXT(Opportunity__r.Lines_of_Businesses__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Offering</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Platform__c</fullName>
        <formula>TEXT(Opportunity__r.Primary_Line_of_Business__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Platform</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Survey Responses</relationshipLabel>
        <relationshipName>Survey_Responses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OrenAir_Project_Id__c</fullName>
        <label>OpenAir Project Id</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other__c</fullName>
        <label>Other</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PS_Contact_email__c</fullName>
        <label>PS Contact email</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Part_of_Organization__c</fullName>
        <label>Part of Organization</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Partner  (Lookup)</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Survey Responses (Partner)</relationshipLabel>
        <relationshipName>Survey_Responses1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Partner_Response_Type__c</fullName>
        <formula>IF(ISNULL(Value(NPS_Recommend_Rating__c)), &apos;&apos;, 
IF( Value(NPS_Recommend_Rating__c) &lt; 7, &apos;Detractor&apos;, IF(VALUE(NPS_Recommend_Rating__c) &gt; 8 , &apos;Promoter&apos;, &apos;Passive&apos;)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Partner Response Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner__c</fullName>
        <label>Partner</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Product_Offering__c</fullName>
        <formula>If( Case__r.Cloud_Platform__c ==&apos;&apos;, Case__r.BOA_Platform__c, Case__r.Cloud_Platform__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Offering</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Support_Group__c</fullName>
        <formula>Text(Case__r.Product_Support_Group__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Support Group</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Business_Unit__c</fullName>
        <label>Project Business Unit</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Description__c</fullName>
        <label>Project Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Project_End_Date__c</fullName>
        <label>Project End Date</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Go_Live_Date__c</fullName>
        <label>Project Go-Live Date</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Health__c</fullName>
        <label>Project Health</label>
        <length>160</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Name__c</fullName>
        <label>Project Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Reference_ID__c</fullName>
        <label>Project Reference ID</label>
        <length>160</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Start_Date__c</fullName>
        <label>Project Start Date</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Type__c</fullName>
        <label>Project Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quality_of_Training__c</fullName>
        <description>Requested by Iurii Koretniuk  on 4/10/2018</description>
        <label>Quality of Training</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Rating_on_Business_Value__c</fullName>
        <label>Rating on Business Value</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rating_on_CX_Vision__c</fullName>
        <label>Rating on CX Vision</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rating_on_Solution_Design__c</fullName>
        <label>Rating on Solution Design</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <formula>text(Account__r.Country__r.Region__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Respondent_ID__c</fullName>
        <externalId>true</externalId>
        <label>Respondent ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Response_Type_2__c</fullName>
        <formula>IF(ISNULL(Value(NPS_Rating__c)), &apos;&apos;,
IF( Value(NPS_Rating__c) &lt; 7, &apos;Detractor&apos;, IF(VALUE(NPS_Rating__c) &gt; 8 , &apos;Promoter&apos;, &apos;Passive&apos;)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Response Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Response_Type__c</fullName>
        <label>Response Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Promoter</fullName>
                </value>
                <value>
                    <fullName>Passive</fullName>
                </value>
                <value>
                    <fullName>Detractor</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Role_Description__c</fullName>
        <label>Role Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Role_Name__c</fullName>
        <label>Role Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Role_in_Organization__c</fullName>
        <label>Role in Organization</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Root_Cause_Found__c</fullName>
        <label>Root Cause Found?</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Salesforce_id__c</fullName>
        <label>Salesforce_id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Satis_Documentation__c</fullName>
        <label>Documentation</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Satis_Other__c</fullName>
        <label>Other</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Satis_Product_Quality__c</fullName>
        <label>Product Quality</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Satis_Professionalism_Attitude__c</fullName>
        <label>Professionalism/Attitude</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Satis_Responsiveness_Resolution_time__c</fullName>
        <label>Responsiveness/Resolution time</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Satis_Technical_Expertise__c</fullName>
        <label>Technical Expertise</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Send_to_Date__c</fullName>
        <label>Send to Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Solariat_Response__c</fullName>
        <description>response from Solariat server</description>
        <label>Solariat Response</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sold_To_Account__c</fullName>
        <formula>Case__r.Sold_To_Account__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sold To Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sold_to_Account_Name__c</fullName>
        <formula>Case__r.Sold_To_Account__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sold to Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Solution_In_Place__c</fullName>
        <label>Solution In Place?</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Solution_Proposed__c</fullName>
        <label>Solution Proposed?</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Survey_Requested__c</fullName>
        <label>Survey Requested</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Survey_Type__c</fullName>
        <label>Survey Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Transactional</fullName>
                    <default>true</default>
                    <label>Transactional</label>
                </value>
                <value>
                    <fullName>Relationship</fullName>
                </value>
                <value>
                    <fullName>NPS Interview</fullName>
                </value>
                <value>
                    <fullName>Partner</fullName>
                </value>
                <value>
                    <fullName>SMART</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Time_to_Resolve_Root_Cause__c</fullName>
        <label>Time to Resolve Root Cause</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Time_to_resolve_case__c</fullName>
        <label>Time to resolve case</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Understand_Impact_Company__c</fullName>
        <label>Understand Impact-Company</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Understand_Impact_Personal__c</fullName>
        <label>Understand Impact-Personal</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Understand_Request__c</fullName>
        <label>Understand Request</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Usability__c</fullName>
        <label>Usability</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Vendor_Source__c</fullName>
        <formula>if(Mod(Value(Right(Name,3)),2)==0,&quot;TR&quot;,&quot;GS&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Vendor_Source</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Verbatim2__c</fullName>
        <label>Future Use Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Verbatim3__c</fullName>
        <label>Verbatim on Partner</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Verbatim__c</fullName>
        <label>Verbatim</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Verbatim_on_Business_Value__c</fullName>
        <label>Verbatim on Business Value</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Verbatim_on_CX_vision__c</fullName>
        <label>Verbatim on CX vision</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Verbatim_on_doing_business_with_Genesys__c</fullName>
        <label>Verbatim on doing business with Genesys</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Verbatim_on_solution_design__c</fullName>
        <label>Verbatim on solution design</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Vertical__c</fullName>
        <formula>text(Contact__r.Account.Industry)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Vertical</label>
        <type>Text</type>
    </fields>
</CustomObject>